# st_data_analysis

./: README.md  app.py  main.py  pyproject.toml  testing.py
.streamlit/: config.toml
pages_list/: page_data.py  page_redirect.py  page_stats.py  page_tests.py  page_visual.py
