[tool.poetry]
name = "st-data-analysis"
version = "0.1.0"
description = ""
authors = ["Rinat <sharafetdinvo42@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
